<resources>
    <string name="title_activity_splashscreen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="app_vendor">INDIAN COAST GUARD</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_ticket">New Ticket</string>
    <string name="title_fragment_dashboard">Dashboard</string>
    <string name="title_fragment_create_ticket">Create Ticket</string>
    <string name="title_fragment_view_ticket">View Ticket</string>
    <string name="title_fragment_view_contract">View Contract &amp; SLA</string>
    <string name="about">About</string>
    <string name="log_in">Login</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="penalty">Penalty</string>
    <string name="title_fragment_initiate_penalty">Initiate Penalty</string>
    <string name="title_fragment_view_penalty">View Penalty</string>
    <string name="contract">Contract</string>
    <string name="title_fragment_create_contract">Create Contract</string>
    <string name="title_fragment_contractor_sla">Contractor SLA</string>
    <string name="title_fragment_role_configuration">Role Configuration</string>
    <string name="title_fragment_view_vendor_details">View Vendor Details</string>
    <string name="equipment">Equipment</string>
    <string name="title_fragment_add_equipment">Add Equipment</string>
    <string name="title_fragment_view_equipment">View Equipment</string>
    <string name="vendors">Vendors</string>
    <string name="title_fragment_view_sla">View SLA</string>
    <string name="tickets">Tickets</string>
    <string name="smac">SMAC</string>
</resources>